--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "declaration": true,
     "suppressImplicitAnyIndexErrors": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "sourceMap": true
   },
   "filesGlob": [
     "./**/*.ts",
